// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./index.stories CustomRecipient 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiStack-root mui-style-1qh2y1i-MuiStack-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
      >
        <b>
          Order details
        </b>
      </p>
      <div
        class="amount"
      >
        <div
          class="MuiStack-root mui-style-niqf4j-MuiStack-root"
        >
          <div
            class="MuiStack-root mui-style-p24gtu-MuiStack-root"
          >
            <div
              class="MuiBox-root mui-style-wvnvdm"
            >
              <div
                class="MuiBox-root mui-style-olq4e8"
              >
                <iframe
                  height="40"
                  loading="lazy"
                  referrerpolicy="strict-origin"
                  sandbox="allow-scripts"
                  srcdoc="
    <body style="margin: 0; overflow: hidden; display: flex; align-items: center; justify-content: center;">
      <img src="https://safe-transaction-assets.staging.5afe.dev/tokens/logos/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48.png" alt="Safe App logo" height="40" width="auto" style="border-radius: 100%;" />
      <script>
        document.querySelector('img').onerror = (e) => {
          e.target.onerror = null
          e.target.src = "/images/common/token-placeholder.svg"
        }
      </script>
    </body>
  "
                  style="pointer-events: none; border: 0px; display: block;"
                  tabindex="-1"
                  title="USDC"
                  width="40"
                />
              </div>
            </div>
            <div
              class="MuiBox-root mui-style-1rr4qq7"
              data-testid="block-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
              >
                Sell
              </p>
              <div
                class="MuiTypography-root MuiTypography-h4 mui-style-csh7nj-MuiTypography-root"
              >
                <span
                  aria-label="10 USDC"
                  class="container"
                  data-mui-internal-clone-element="true"
                >
                  <b
                    class="tokenText"
                  >
                    10
                     
                    USDC
                  </b>
                </span>
              </div>
            </div>
            <div
              class="MuiStack-root mui-style-1nxlmhd-MuiStack-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSvgIcon-root MuiSvgIcon-fontSizeSmall mui-style-15tzxj8-MuiSvgIcon-root-MuiSvgIcon-root"
                data-testid="EastRoundedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.29 5.71c-.39.39-.39 1.02 0 1.41L18.17 11H3c-.55 0-1 .45-1 1s.45 1 1 1h15.18l-3.88 3.88c-.39.39-.39 1.02 0 1.41s1.02.39 1.41 0l5.59-5.59c.39-.39.39-1.02 0-1.41l-5.6-5.58c-.38-.39-1.02-.39-1.41 0"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiStack-root mui-style-p24gtu-MuiStack-root"
          >
            <div
              class="MuiBox-root mui-style-wvnvdm"
            >
              <div
                class="MuiBox-root mui-style-olq4e8"
              >
                <iframe
                  height="40"
                  loading="lazy"
                  referrerpolicy="strict-origin"
                  sandbox="allow-scripts"
                  srcdoc="
    <body style="margin: 0; overflow: hidden; display: flex; align-items: center; justify-content: center;">
      <img src="https://safe-transaction-assets.staging.5afe.dev/tokens/logos/0xfFf9976782d46CC05630D1f6eBAb18b2324d6B14.png" alt="Safe App logo" height="40" width="auto" style="border-radius: 100%;" />
      <script>
        document.querySelector('img').onerror = (e) => {
          e.target.onerror = null
          e.target.src = "/images/common/token-placeholder.svg"
        }
      </script>
    </body>
  "
                  style="pointer-events: none; border: 0px; display: block;"
                  tabindex="-1"
                  title="NPR"
                  width="40"
                />
              </div>
            </div>
            <div
              class="MuiBox-root mui-style-1rr4qq7"
              data-testid="block-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
              >
                For at least
              </p>
              <div
                class="MuiTypography-root MuiTypography-h4 mui-style-csh7nj-MuiTypography-root"
              >
                <span
                  aria-label="0 NPR"
                  class="container"
                  data-mui-internal-clone-element="true"
                >
                  <b
                    class="tokenText"
                  >
                    0
                     
                    NPR
                  </b>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container mui-style-1yff1ei-MuiGrid-root"
        data-testid="limit-price"
      >
        <div
          class="MuiGrid-root MuiGrid-item mui-style-ezmk0c-MuiGrid-root"
          data-testid="tx-row-title"
          style="word-break: break-word;"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
          >
            Limit price
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true mui-style-1vd824g-MuiGrid-root"
          data-testid="tx-data-row"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
          >
            1 
            NPR
             = 
            0
             
            USDC
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container mui-style-1yff1ei-MuiGrid-root"
        data-testid=""
      >
        <div
          class="MuiGrid-root MuiGrid-item mui-style-ezmk0c-MuiGrid-root"
          data-testid="tx-row-title"
          style="word-break: break-word;"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
          >
            Expiry
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true mui-style-1vd824g-MuiGrid-root"
          data-testid="tx-data-row"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
          >
            Dec 24, 2024 - 12:54:40 AM
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container mui-style-1yff1ei-MuiGrid-root"
        data-testid="order-id"
      >
        <div
          class="MuiGrid-root MuiGrid-item mui-style-ezmk0c-MuiGrid-root"
          data-testid="tx-row-title"
          style="word-break: break-word;"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
          >
            Order ID
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true mui-style-1vd824g-MuiGrid-root"
          data-testid="tx-data-row"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
          >
            <div
              class="MuiStack-root mui-style-m69qwo-MuiStack-root"
            >
              <span>
                170e4a48
              </span>
              <span
                aria-label="Copy to clipboard"
                class=""
                data-mui-internal-clone-element="true"
                style="cursor: pointer;"
              >
                <button
                  aria-label="Copy to clipboard"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall mui-style-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <mock-icon
                    aria-hidden=""
                    class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall mui-style-gvpe62-MuiSvgIcon-root"
                    data-testid="copy-btn-icon"
                    focusable="false"
                  />
                </button>
              </span>
              <div
                class="MuiBox-root mui-style-yjghm1"
              >
                <a
                  aria-label=""
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall mui-style-1vbp2rr-MuiButtonBase-root-MuiIconButton-root"
                  data-mui-internal-clone-element="true"
                  data-testid="explorer-btn"
                  href="https://explorer.cow.fi/orders/0x03a5d561ad2452d719a0d075573f4bed68217c696b52f151122c30e3e4426f1b05e6b5eb1d0e6aabab082057d5bb91f2ee6d11be66223d88"
                  rel="noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <mock-icon
                    aria-hidden=""
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall mui-style-tqxw8e-MuiSvgIcon-root"
                    focusable="false"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container mui-style-1yff1ei-MuiGrid-root"
        data-testid="widget-fee"
      >
        <div
          class="MuiGrid-root MuiGrid-item mui-style-ezmk0c-MuiGrid-root"
          data-testid="tx-row-title"
          style="word-break: break-word;"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
          >
            Widget fee
             
            <span
              class=""
              data-mui-internal-clone-element="true"
            >
              <mock-icon
                aria-hidden=""
                class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall mui-style-1nezs5b-MuiSvgIcon-root"
                focusable="false"
              />
            </span>
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true mui-style-1vd824g-MuiGrid-root"
          data-testid="tx-data-row"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
          >
            0.5
             %
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container mui-style-1yff1ei-MuiGrid-root"
        data-testid="interact-wth"
      >
        <div
          class="MuiGrid-root MuiGrid-item mui-style-ezmk0c-MuiGrid-root"
          data-testid="tx-row-title"
          style="word-break: break-word;"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
          >
            Interact with
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true mui-style-1vd824g-MuiGrid-root"
          data-testid="tx-data-row"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
          >
            <div
              class="container"
            >
              <div
                class="avatarContainer"
                style="width: 24px; height: 24px;"
              >
                <div
                  class="icon"
                  style="background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA4IDgiIHNoYXBlLXJlbmRlcmluZz0ib3B0aW1pemVTcGVlZCIgd2lkdGg9IjY0IiBoZWlnaHQ9IjY0Ij48cGF0aCBmaWxsPSJoc2woMjUwIDg5JSA3NSUpIiBkPSJNMCwwSDhWOEgweiIvPjxwYXRoIGZpbGw9ImhzbCgzNDggNjglIDMxJSkiIGQ9Ik0wLDFoMXYxaC0xek03LDFoMXYxaC0xek0yLDFoMXYxaC0xek01LDFoMXYxaC0xek0zLDFoMXYxaC0xek00LDFoMXYxaC0xek0wLDJoMXYxaC0xek03LDJoMXYxaC0xek0xLDJoMXYxaC0xek02LDJoMXYxaC0xek0xLDNoMXYxaC0xek02LDNoMXYxaC0xek0yLDNoMXYxaC0xek01LDNoMXYxaC0xek0xLDRoMXYxaC0xek02LDRoMXYxaC0xek0zLDRoMXYxaC0xek00LDRoMXYxaC0xek0wLDVoMXYxaC0xek03LDVoMXYxaC0xek0zLDVoMXYxaC0xek00LDVoMXYxaC0xek0xLDZoMXYxaC0xek02LDZoMXYxaC0xek0zLDZoMXYxaC0xek00LDZoMXYxaC0xek0zLDdoMXYxaC0xek00LDdoMXYxaC0xeiIvPjxwYXRoIGZpbGw9ImhzbCg3NiA2OSUgNjclKSIgZD0iTTEsMGgxdjFoLTF6TTYsMGgxdjFoLTF6TTEsMWgxdjFoLTF6TTYsMWgxdjFoLTF6TTIsNWgxdjFoLTF6TTUsNWgxdjFoLTF6Ii8+PC9zdmc+); width: 24px; height: 24px;"
                />
              </div>
              <div
                class="inline MuiBox-root mui-style-1lchl8k"
              >
                <div
                  class="addressContainer inline"
                >
                  <div
                    class="MuiBox-root mui-style-b5p5gz"
                  >
                    <span
                      aria-label="Copy to clipboard"
                      class=""
                      data-mui-internal-clone-element="true"
                      style="cursor: pointer;"
                    >
                      <span>
                        0x9008D19f58AAbD9eD0D60971565AA8510560ab41
                      </span>
                    </span>
                  </div>
                  <div
                    class="MuiBox-root mui-style-yjghm1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container mui-style-1yff1ei-MuiGrid-root"
        data-testid="recipient"
      >
        <div
          class="MuiGrid-root MuiGrid-item mui-style-ezmk0c-MuiGrid-root"
          data-testid="tx-row-title"
          style="word-break: break-word;"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
          >
            Recipient
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true mui-style-1vd824g-MuiGrid-root"
          data-testid="tx-data-row"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
          >
            <div
              class="container"
            >
              <div
                class="avatarContainer"
                style="width: 24px; height: 24px;"
              >
                <div
                  class="icon"
                  style="background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA4IDgiIHNoYXBlLXJlbmRlcmluZz0ib3B0aW1pemVTcGVlZCIgd2lkdGg9IjY0IiBoZWlnaHQ9IjY0Ij48cGF0aCBmaWxsPSJoc2woMTc0IDcwJSA2MCUpIiBkPSJNMCwwSDhWOEgweiIvPjxwYXRoIGZpbGw9ImhzbCgyNSA4MSUgNDAlKSIgZD0iTTAsMGgxdjFoLTF6TTcsMGgxdjFoLTF6TTAsMWgxdjFoLTF6TTcsMWgxdjFoLTF6TTEsMWgxdjFoLTF6TTYsMWgxdjFoLTF6TTMsMWgxdjFoLTF6TTQsMWgxdjFoLTF6TTMsMmgxdjFoLTF6TTQsMmgxdjFoLTF6TTAsM2gxdjFoLTF6TTcsM2gxdjFoLTF6TTIsM2gxdjFoLTF6TTUsM2gxdjFoLTF6TTMsM2gxdjFoLTF6TTQsM2gxdjFoLTF6TTIsNGgxdjFoLTF6TTUsNGgxdjFoLTF6TTMsNGgxdjFoLTF6TTQsNGgxdjFoLTF6TTIsNWgxdjFoLTF6TTUsNWgxdjFoLTF6TTAsNmgxdjFoLTF6TTcsNmgxdjFoLTF6TTEsNmgxdjFoLTF6TTYsNmgxdjFoLTF6TTMsNmgxdjFoLTF6TTQsNmgxdjFoLTF6TTMsN2gxdjFoLTF6TTQsN2gxdjFoLTF6Ii8+PHBhdGggZmlsbD0iaHNsKDIwOSA5MCUgMjclKSIgZD0iTTEsMmgxdjFoLTF6TTYsMmgxdjFoLTF6TTIsMmgxdjFoLTF6TTUsMmgxdjFoLTF6TTEsM2gxdjFoLTF6TTYsM2gxdjFoLTF6TTAsNGgxdjFoLTF6TTcsNGgxdjFoLTF6TTEsN2gxdjFoLTF6TTYsN2gxdjFoLTF6Ii8+PC9zdmc+); width: 24px; height: 24px;"
                />
              </div>
              <div
                class="MuiBox-root mui-style-1lchl8k"
              >
                <div
                  class="addressContainer"
                >
                  <div
                    class="MuiBox-root mui-style-b5p5gz"
                  >
                    <span
                      aria-label="Copy to clipboard"
                      class=""
                      data-mui-internal-clone-element="true"
                      style="cursor: pointer;"
                    >
                      <span>
                        0x1234...7890
                      </span>
                    </span>
                  </div>
                  <div
                    class="MuiBox-root mui-style-yjghm1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorWarning MuiAlert-standardWarning MuiAlert-standard mui-style-1wi6bbj-MuiPaper-root-MuiAlert-root"
          data-testid="recipient-alert"
          role="alert"
          style="--Paper-shadow: none;"
        >
          <div
            class="MuiAlert-icon mui-style-vab54s-MuiAlert-icon"
          >
            mock-icon
          </div>
          <div
            class="MuiAlert-message mui-style-zioonp-MuiAlert-message"
          >
            <p
              class="MuiTypography-root MuiTypography-body2 mui-style-17vdyq3-MuiTypography-root"
            >
              <span
                class="MuiTypography-root MuiTypography-body1 mui-style-w5uidf-MuiTypography-root"
              >
                Order recipient address differs from order owner.
              </span>
               
              Double check the address to prevent fund loss.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`./index.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <div
      class="MuiStack-root mui-style-1qh2y1i-MuiStack-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
      >
        <b>
          Order details
        </b>
      </p>
      <div
        class="amount"
      >
        <div
          class="MuiStack-root mui-style-niqf4j-MuiStack-root"
        >
          <div
            class="MuiStack-root mui-style-p24gtu-MuiStack-root"
          >
            <div
              class="MuiBox-root mui-style-wvnvdm"
            >
              <div
                class="MuiBox-root mui-style-olq4e8"
              >
                <iframe
                  height="40"
                  loading="lazy"
                  referrerpolicy="strict-origin"
                  sandbox="allow-scripts"
                  srcdoc="
    <body style="margin: 0; overflow: hidden; display: flex; align-items: center; justify-content: center;">
      <img src="https://safe-transaction-assets.staging.5afe.dev/tokens/logos/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48.png" alt="Safe App logo" height="40" width="auto" style="border-radius: 100%;" />
      <script>
        document.querySelector('img').onerror = (e) => {
          e.target.onerror = null
          e.target.src = "/images/common/token-placeholder.svg"
        }
      </script>
    </body>
  "
                  style="pointer-events: none; border: 0px; display: block;"
                  tabindex="-1"
                  title="USDC"
                  width="40"
                />
              </div>
            </div>
            <div
              class="MuiBox-root mui-style-1rr4qq7"
              data-testid="block-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
              >
                Sell
              </p>
              <div
                class="MuiTypography-root MuiTypography-h4 mui-style-csh7nj-MuiTypography-root"
              >
                <span
                  aria-label="10 USDC"
                  class="container"
                  data-mui-internal-clone-element="true"
                >
                  <b
                    class="tokenText"
                  >
                    10
                     
                    USDC
                  </b>
                </span>
              </div>
            </div>
            <div
              class="MuiStack-root mui-style-1nxlmhd-MuiStack-root"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSvgIcon-root MuiSvgIcon-fontSizeSmall mui-style-15tzxj8-MuiSvgIcon-root-MuiSvgIcon-root"
                data-testid="EastRoundedIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M14.29 5.71c-.39.39-.39 1.02 0 1.41L18.17 11H3c-.55 0-1 .45-1 1s.45 1 1 1h15.18l-3.88 3.88c-.39.39-.39 1.02 0 1.41s1.02.39 1.41 0l5.59-5.59c.39-.39.39-1.02 0-1.41l-5.6-5.58c-.38-.39-1.02-.39-1.41 0"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiStack-root mui-style-p24gtu-MuiStack-root"
          >
            <div
              class="MuiBox-root mui-style-wvnvdm"
            >
              <div
                class="MuiBox-root mui-style-olq4e8"
              >
                <iframe
                  height="40"
                  loading="lazy"
                  referrerpolicy="strict-origin"
                  sandbox="allow-scripts"
                  srcdoc="
    <body style="margin: 0; overflow: hidden; display: flex; align-items: center; justify-content: center;">
      <img src="https://safe-transaction-assets.staging.5afe.dev/tokens/logos/0xfFf9976782d46CC05630D1f6eBAb18b2324d6B14.png" alt="Safe App logo" height="40" width="auto" style="border-radius: 100%;" />
      <script>
        document.querySelector('img').onerror = (e) => {
          e.target.onerror = null
          e.target.src = "/images/common/token-placeholder.svg"
        }
      </script>
    </body>
  "
                  style="pointer-events: none; border: 0px; display: block;"
                  tabindex="-1"
                  title="NPR"
                  width="40"
                />
              </div>
            </div>
            <div
              class="MuiBox-root mui-style-1rr4qq7"
              data-testid="block-label"
            >
              <p
                class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
              >
                For at least
              </p>
              <div
                class="MuiTypography-root MuiTypography-h4 mui-style-csh7nj-MuiTypography-root"
              >
                <span
                  aria-label="0 NPR"
                  class="container"
                  data-mui-internal-clone-element="true"
                >
                  <b
                    class="tokenText"
                  >
                    0
                     
                    NPR
                  </b>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container mui-style-1yff1ei-MuiGrid-root"
        data-testid="limit-price"
      >
        <div
          class="MuiGrid-root MuiGrid-item mui-style-ezmk0c-MuiGrid-root"
          data-testid="tx-row-title"
          style="word-break: break-word;"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
          >
            Limit price
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true mui-style-1vd824g-MuiGrid-root"
          data-testid="tx-data-row"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
          >
            1 
            NPR
             = 
            0
             
            USDC
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container mui-style-1yff1ei-MuiGrid-root"
        data-testid=""
      >
        <div
          class="MuiGrid-root MuiGrid-item mui-style-ezmk0c-MuiGrid-root"
          data-testid="tx-row-title"
          style="word-break: break-word;"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
          >
            Expiry
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true mui-style-1vd824g-MuiGrid-root"
          data-testid="tx-data-row"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
          >
            Dec 24, 2024 - 12:54:40 AM
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container mui-style-1yff1ei-MuiGrid-root"
        data-testid="order-id"
      >
        <div
          class="MuiGrid-root MuiGrid-item mui-style-ezmk0c-MuiGrid-root"
          data-testid="tx-row-title"
          style="word-break: break-word;"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
          >
            Order ID
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true mui-style-1vd824g-MuiGrid-root"
          data-testid="tx-data-row"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
          >
            <div
              class="MuiStack-root mui-style-m69qwo-MuiStack-root"
            >
              <span>
                170e4a48
              </span>
              <span
                aria-label="Copy to clipboard"
                class=""
                data-mui-internal-clone-element="true"
                style="cursor: pointer;"
              >
                <button
                  aria-label="Copy to clipboard"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall mui-style-xyrzjn-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <mock-icon
                    aria-hidden=""
                    class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall mui-style-gvpe62-MuiSvgIcon-root"
                    data-testid="copy-btn-icon"
                    focusable="false"
                  />
                </button>
              </span>
              <div
                class="MuiBox-root mui-style-yjghm1"
              >
                <a
                  aria-label=""
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall mui-style-1vbp2rr-MuiButtonBase-root-MuiIconButton-root"
                  data-mui-internal-clone-element="true"
                  data-testid="explorer-btn"
                  href="https://explorer.cow.fi/orders/0x03a5d561ad2452d719a0d075573f4bed68217c696b52f151122c30e3e4426f1b05e6b5eb1d0e6aabab082057d5bb91f2ee6d11be66223d88"
                  rel="noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <mock-icon
                    aria-hidden=""
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall mui-style-tqxw8e-MuiSvgIcon-root"
                    focusable="false"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container mui-style-1yff1ei-MuiGrid-root"
        data-testid="widget-fee"
      >
        <div
          class="MuiGrid-root MuiGrid-item mui-style-ezmk0c-MuiGrid-root"
          data-testid="tx-row-title"
          style="word-break: break-word;"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
          >
            Widget fee
             
            <span
              class=""
              data-mui-internal-clone-element="true"
            >
              <mock-icon
                aria-hidden=""
                class="MuiSvgIcon-root MuiSvgIcon-colorBorder MuiSvgIcon-fontSizeSmall mui-style-1nezs5b-MuiSvgIcon-root"
                focusable="false"
              />
            </span>
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true mui-style-1vd824g-MuiGrid-root"
          data-testid="tx-data-row"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
          >
            0.5
             %
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container mui-style-1yff1ei-MuiGrid-root"
        data-testid="interact-wth"
      >
        <div
          class="MuiGrid-root MuiGrid-item mui-style-ezmk0c-MuiGrid-root"
          data-testid="tx-row-title"
          style="word-break: break-word;"
        >
          <span
            class="MuiTypography-root MuiTypography-body2 mui-style-1ew0eu5-MuiTypography-root"
          >
            Interact with
          </span>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true mui-style-1vd824g-MuiGrid-root"
          data-testid="tx-data-row"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 mui-style-v6lhhw-MuiTypography-root"
          >
            <div
              class="container"
            >
              <div
                class="avatarContainer"
                style="width: 24px; height: 24px;"
              >
                <div
                  class="icon"
                  style="background-image: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA4IDgiIHNoYXBlLXJlbmRlcmluZz0ib3B0aW1pemVTcGVlZCIgd2lkdGg9IjY0IiBoZWlnaHQ9IjY0Ij48cGF0aCBmaWxsPSJoc2woMjUwIDg5JSA3NSUpIiBkPSJNMCwwSDhWOEgweiIvPjxwYXRoIGZpbGw9ImhzbCgzNDggNjglIDMxJSkiIGQ9Ik0wLDFoMXYxaC0xek03LDFoMXYxaC0xek0yLDFoMXYxaC0xek01LDFoMXYxaC0xek0zLDFoMXYxaC0xek00LDFoMXYxaC0xek0wLDJoMXYxaC0xek03LDJoMXYxaC0xek0xLDJoMXYxaC0xek02LDJoMXYxaC0xek0xLDNoMXYxaC0xek02LDNoMXYxaC0xek0yLDNoMXYxaC0xek01LDNoMXYxaC0xek0xLDRoMXYxaC0xek02LDRoMXYxaC0xek0zLDRoMXYxaC0xek00LDRoMXYxaC0xek0wLDVoMXYxaC0xek03LDVoMXYxaC0xek0zLDVoMXYxaC0xek00LDVoMXYxaC0xek0xLDZoMXYxaC0xek02LDZoMXYxaC0xek0zLDZoMXYxaC0xek00LDZoMXYxaC0xek0zLDdoMXYxaC0xek00LDdoMXYxaC0xeiIvPjxwYXRoIGZpbGw9ImhzbCg3NiA2OSUgNjclKSIgZD0iTTEsMGgxdjFoLTF6TTYsMGgxdjFoLTF6TTEsMWgxdjFoLTF6TTYsMWgxdjFoLTF6TTIsNWgxdjFoLTF6TTUsNWgxdjFoLTF6Ii8+PC9zdmc+); width: 24px; height: 24px;"
                />
              </div>
              <div
                class="inline MuiBox-root mui-style-1lchl8k"
              >
                <div
                  class="addressContainer inline"
                >
                  <div
                    class="MuiBox-root mui-style-b5p5gz"
                  >
                    <span
                      aria-label="Copy to clipboard"
                      class=""
                      data-mui-internal-clone-element="true"
                      style="cursor: pointer;"
                    >
                      <span>
                        0x9008D19f58AAbD9eD0D60971565AA8510560ab41
                      </span>
                    </span>
                  </div>
                  <div
                    class="MuiBox-root mui-style-yjghm1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
